...
//

import UIKit
import RxSwift

final class CatImagesController: UIViewController {
    private let collectionView = CatCollectionView(indetifier: "CatImagesCollection")

    private let filterButton = UIBarButtonItem().style {
        $0.image = UIImage(systemName: "slider.horizontal.3")
        $0.accessibilityIdentifier = "filterButton"
    }
    
    private let logOutButton = UIBarButtonItem().style {
        $0.tintColor = .systemRed
...
