...
    }

    private let gifSwitcher = UISwitch()

    private let applyButton = UIButton().style {
        $0.backgroundColor = .systemBlue
        $0.setTitle("Apply", for: .normal)
        $0.setTitleColor(.white, for: .normal)
        $0.layer.cornerRadius = 15
        $0.height(44)
    }

    init(_ viewModel: SearchFilterViewModel) {
...
